<resources>
    <string name="app_name">0ES UdeA</string>
    <string name="title_activity_maps">Mapa Universidad</string>
    <string name="title_activity_login">Iniciar Sesion</string>
    <string name="empresa">ES UdeA</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_out">Cerrar Sesión</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Usuario demasiado corto</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_incorrect_password">Datos ingresados incorrectos</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="prompt_email">Nombre de Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="title_activity_settings">Configuración</string>
    <string name="ajustes">Ajustes</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="sampletext">Texto de Ejemplo</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="equipos">Equipos</string>
    <string name="horario">Horario</string>
    <string name="grupos">Grupos</string>
    <string name="mapa">Mapa</string>
    <string name="galeria">Galeria</string>
    <string name="Sitio_Web">Sitio Web</string>
    <string name="Configuracion">Ajustes</string>
    <string name="Informacion">Informacion</string>
    <string name="Herramientas">Herramientas</string>
    <string name="Universidad">Universidad</string>
    <string name="UniversidadFull">Universidad De Antioquia</string>
    <string name="login">Iniciar Sesion</string>
    <string name="eventos">Eventos</string>
    <string name="tabladeposiciones">Tabla de Posiciones</string>
    <string name="salir">Salir</string>
    <string name="namelabel">Nombre</string>
    <string name="Emaillabel">Email@udea.edu.co</string>
    <string name="Usernamelabel">Nombre de Usuario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="namelabel1">Andy</string>
    <string name="Emaillabel1">Andy@udea.edu.co</string>
    <string name="hint_changepassword">Nueva Contraseña</string>
    <string name="action_changepassword_in">Cambiar Contraseña</string>
    <string name="action_changepassword_short">Aplicar</string>
    <string name="mis_datos">Mis Datos</string>
    <string name="facultad">Mi Facultad</string>
    <string name="carrera">Mi Carrera</string>
    <string name="cedula"> TIP #</string>
    <string name="Information">Información</string>
    <string name="Pais">Pais</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="cheese_ipsum">Está localizada en la ciudad de Medellín, entre la calle 67 (Barranquilla)
        y la carrera 55 (Av. Del Ferrocarril) y se terminó de construir en 1966. Tiene una superficie de 287.467 m²
        y unos 133.942 m² de área construida, con zonas peatonales, áreas verdes y espacios abiertos. En su interior,
        además de los bloques de aulas, laboratorios y espacios administrativos, se encuentran el Museo Universitario,
        el Teatro Universitario Camilo Torres Restrepo, la Biblioteca Central y un amplio complejo deportivo. Hay una
        constante relación artística con las obras de maestros reconocidos de la plástica nacional como Francisco Antonio Cano,
        Jorge Cárdenas Hernández, Rodrigo Arenas Betancur, Salvador Arango, Enrique Grau, Eduardo Ramírez Villamizar,
        Alonso Ríos, Eladio Vélez y Marta Lucía Villafañe, entre otros.

        El Campus fue declarado bien de interés cultural de la nación, el 26 de julio de 2013, y es el único del país con
        esta categoría patrimonial. </string>
    <string name="checkin">Checkin</string>
    <string name="Programas">Programas</string>
    <string name="Oficinas">Oficinas</string>
    <string name="Snackbar_Ya_Estas">Ya Estás en Universidad</string>
    <string name="Perfil">Perfil</string>
    <string name="author">Es UdeA</string>
    <string name="url">https://www.udea.edu.co</string>
    <string name="github">Proyecto Final</string>
    <string name="share">Compartir</string>
    <string name="sample_2">Sample 2</string>
    <string name="details_2"><![CDATA[• Any amount of markers per fragment\n• Custom layout\n• Custom initial position]]></string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="maps_api_key">AIzaSyDs1wQfeVGBuH8sqZw8EEKb-Z_jIjvQFQ0</string>
    <string name="lorem_ipsum">Está localizada en la ciudad de Medellín, entre la calle 67 (Barranquilla)
        y la carrera 55 (Av. Del Ferrocarril) y se terminó de construir en 1966. Tiene una superficie de 287.467 m²
        y unos 133.942 m² de área construida, con zonas peatonales, áreas verdes y espacios abiertos. En su interior,
        además de los bloques de aulas, laboratorios y espacios administrativos, se encuentran el Museo Universitario,
        el Teatro Universitario Camilo Torres Restrepo, la Biblioteca Central y un amplio complejo deportivo. Hay una
        constante relación artística con las obras de maestros reconocidos de la plástica nacional como Francisco Antonio Cano,
        Jorge Cárdenas Hernández, Rodrigo Arenas Betancur, Salvador Arango, Enrique Grau, Eduardo Ramírez Villamizar,
        Alonso Ríos, Eladio Vélez y Marta Lucía Villafañe, entre otros.</string>
    <string name="sedes">Sedes</string>
    <string name="group_facultad">Mi Facultad</string>
    <string name="group_cargar">Cargar Grupos</string>
    <string name="Grupos">Grupos</string>
    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="Lugar">Lugar: Teatro Camilo Torres</string>
    <string name="Fecha">Fecha: Jueves 16 de Junio de 2016</string>
    <string name="Hora">Hora: 21:40 p.m.</string>
    <string name="title_activity_information">Información</string>
    <string name="informaciontituloartes">Departamento de Artes Escénicas</string>
    <string name="informacionartes">El Departamento de Artes Escénicas como unidad académica de educación superior es un centro de estudios, investigación, producción, conservación y difusión de las artes escénicas. Adelanta una amplia actividad de extensión y difusión de las artes escénicas mediante la proyección de sus productos artísticos a la comunidad.  Informes   Secretaría del Departamento de Artes Escénicas Ubicación: Ciudad Universitaria, Bloque 25 oficina 103  Correo electrónico: departamento.escenicas@udea.edu.co Teléfono: +57 (4)219 5890</string>
    <string name="programastituloartes">Departamento de Artes Visuales</string>
    <string name="programasartes">El Departamento de Artes Visuales forma profesionales en los distintos campos de las artes, con la capacidad de interactuar en los escenarios de la contemporaneidad. Los artistas del Departamento de Artes Visuales están calificados para desempeñarse en diferentes campos, entre los perfiles de formación se encuentran: la creación artística, la docencia, la gestión cultural, la crítica y otros tantos que inciden directamente en la realidad cultural, con proyección local, regional, nacional e internacional.  Informes: Secretaría del Departamento Ubicación: Ciudad Universitaria, Bloque 24 oficina 123 Teléfono: +57 (4) 219 5893 Correo electrónico: departamentoartesvisuales@udea.edu.co  Medellín - Colombia</string>
    <string name="oficinastituloartes">Departamento de Música</string>
    <string name="oficinasartes">El Departamento de Música de la Facultad de Artes de la Universidad de Antioquia es un centro de formación que a nivel superior ofrece programas de pregrado en las diferentes modalidades musicales: instrumento, composición, canto y Licenciatura en Música, para quienes posean aptitudes y condiciones de desarrollo adecuadas para el logro de los propósitos formulados. El Departamento es un centro de estudio, producción, conservación y difusión de las disciplinas musicales y como tal, prepara profesionales y académicos de las más altas calidades que con visión universal se comprometan con las realidades artísticas, educativas y culturales del país. Su metodología es fundamentalmente presencial y contempla la formación práctica, teórica, humanística y pedagógica dirigida hacia los procesos de educación, desarrollo y transformación social.  Informes Secretaría del Departamento de Música Ubicación: Ciudad Universitaria, Bloque 25 oficina 103  Teléfono: +57 (4)219 5896 Correo electrónico: departamentomusica@udea.edu.co  Medellín / Colombia</string>
    <string name="informaciontituloagrarias">Acerca de la Facultad</string>
    <string name="informacionagrarias">Ubicada en la Ciudadela Universitaria de Robledo, además de los edificios que permiten las actividades lectivas, la Facultad de Ciencias Agrarias cuenta con un Hospital Veterinario para Pequeñas y Grandes Especies, laboratorios Clínico, Microbiología y Parasitología, Patología, Morfología, Biología Molecular, Fisiología y Farmacología, y Bioquímica y Nutrición Animal. Adicionalmente, sus investigadores desarrollan actividades en la Sede de Investigaciones Universitaria -SIU- , en la cual existen infraestructura y equipos de última generación.</string>
    <string name="programastituloagrarias">Unidad de Diagnóstico</string>
</resources>