<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout"
android:layout_height="match_parent"
android:layout_width="match_parent"
android:fitsSystemWindows="true"
tools:context=".SplashScreen.SplashActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_linearlayout"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/profile_vertical_margin"
        android:paddingBottom="@dimen/profile_vertical_margin"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_marginTop="@dimen/margin_profile"
            android:layout_width="@dimen/list_item_avatar_size"
            android:layout_height="@dimen/list_item_avatar_size"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/andy" />

        <TextView
            android:id="@+id/namelabelprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:text="@string/namelabel"
            android:textSize="@dimen/namesize"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/usercclabelprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/cedula"
            android:gravity="center_horizontal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/Emaillabel"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/userfacultadlabelprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/facultad"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/carreralabelprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carrera"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textStyle="bold|italic" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/misDatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mis_datos"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_changepassword_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            style="?android:textAppearanceSmall"
            android:id="@+id/boton_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/action_changepassword_in"
            android:textStyle="bold"
            android:visibility="gone"
            />
    </LinearLayout>

<android.support.design.widget.NavigationView
    android:id="@+id/nav_view"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    app:headerLayout="@layout/general_navigation_header"
    app:menu="@menu/general_drawer_view"/>

</android.support.v4.widget.DrawerLayout>