<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_linearlayout1"
    android:orientation="vertical"
    tools:context=".Profile.ProfileActivity"
    tools:showIn="@layout/profile_activity_profile">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways|snap">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_linearlayout"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/profile_vertical_margin"
        android:paddingBottom="@dimen/profile_vertical_margin"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_marginTop="@dimen/margin"
            android:layout_width="@dimen/list_item_avatar_size"
            android:layout_height="@dimen/list_item_avatar_size"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/andy">
        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/namelabelprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:text="@string/namelabel"
            android:textSize="@dimen/namesize"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1">
        </TextView>

        <TextView
            android:id="@+id/usernamelabelprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/Usernamelabel"
            android:gravity="center_horizontal">
        </TextView>

        <TextView
            android:id="@+id/emaillabelprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/Emaillabel"
            android:gravity="center_horizontal">
        </TextView>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passwordchange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_changepassword"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_changepassword_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <Button
            style="?android:textAppearanceSmall"
            android:id="@+id/boton_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/action_changepassword_in"
            android:textStyle="bold">
        </Button>
    </LinearLayout>
</LinearLayout>