<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"
    android:gravity="center_vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorCard">

            <ImageView
                android:id="@+id/imagenhome"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/universidad_1"
                android:layout_below="@+id/textView"
                android:layout_toRightOf="@+id/textView2"
                android:layout_toEndOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:text="@string/element_text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/textView"
                android:textSize="15sp"
                android:text=" "/>

            <TextView
                android:id="@+id/textView_lugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/Lugar"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:layout_below="@+id/textView_hora"
                android:layout_toRightOf="@+id/imagenhome"
                android:layout_toEndOf="@+id/imagenhome" />

            <TextView
                android:id="@+id/textView_hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/Hora"
                android:layout_below="@+id/textView"
                android:paddingTop="15dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:layout_toRightOf="@+id/imagenhome"
                android:layout_toEndOf="@+id/imagenhome" />

            <TextView
                android:id="@+id/textView_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/Fecha"
                android:layout_below="@+id/textView_lugar"
                android:layout_alignLeft="@+id/textView_lugar"
                android:layout_alignStart="@+id/textView_lugar" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>